--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
 .body {
   margin: 0 auto;
-  background-color: #f8f8f8;
   
   font-family: sans-serif;
   font-size: 16px;
@@ -85,6 +84,11 @@ a, a:visited {
   font: inherit;
   color: #fff;
   font-weight: bold;
+  cursor: pointer;
+}
+
+.hero-button:visited {
+  color: #fff;
 }
 
 .w-1000 {
@@ -104,6 +108,10 @@ a, a:visited {
   font-size: 1.75em;
 }
 
+.bg-c-f7 {
+  background-color: #f7f7f7;
+}
+
 .advantages-list {
   justify-content: space-between;
 }
@@ -112,8 +120,8 @@ a, a:visited {
   width: 30%;
 }
 
-.about {
-  background-color: #f7f7f7;
+.p-50 {
+  padding: 50px 0;
 }
 
 .content-img {
@@ -126,4 +134,97 @@ a, a:visited {
 
 .about-text {
   max-width: 520px;
+}
+
+.c-turquoise {
+  color: #17d4ae;
+}
+
+.form-container {
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.booking-fieldset {
+  padding: 20px;
+  width: 100%;
+
+  box-sizing: border-box;
+  border: 2px groove #17d4ae;
+}
+
+.booking-fieldset-legend {
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+.booking-input {
+  border: 1px solid #d8d8d8;
+  border-radius: 5px;
+  padding: 5px;
+
+  width: 170px;
+  height: 15px;
+}
+
+.booking-btn {
+  font: inherit;
+  border-radius: 5px;
+  background: none;
+  font-weight: bold;
+  align-self: flex-start;
+  padding: 10px 25px;
+  border: 1px solid #17d4ae;
+}
+
+.mb-20 {
+  margin-bottom: 20px;
+}
+
+.mb-30 {
+  margin-bottom: 30px;
+}
+
+.w-450 {
+  max-width: 450px;
+}
+
+.booking-label {
+  align-items: center;
+  position: relative;
+}
+
+.booking-label-text{
+  width: 50%;
+  line-height: 2em;
+  font-weight: bold;
+}
+
+.booking-label select {
+  padding: 5px;
+  padding-left: 10px;
+
+  width: 130px;
+  height: 25px;
+
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+
+  color: #000;
+  font-size: 12px; 
+  font-family: sans-serif; 
+}
+
+.booking-arrow {
+  display: block;
+  position: absolute;
+  top: 42%;
+  left: 78%;
+  width: 0;
+  height: 0;
+  border: 4px solid transparent;
+  border-top-color: #000;
+  border-bottom: 0;
 }
