--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,13 @@
 .body {
   margin: 0 auto;
-  
   font-family: sans-serif;
   font-size: 16px;
   line-height: 1.5em;
   color: #303846;
 }
 
-a, a:visited {
+a,
+a:visited {
   color: #303846;
   text-decoration: none;
 }
@@ -16,8 +16,53 @@ a, a:visited {
   display: flex;
 }
 
-.header {
+.scmt-100px {
+  scroll-margin-top: 100px;
+}
+
+.fw-bold {
   font-weight: bold;
+}
+
+.fs-12px {
+  font-size: 12px;
+}
+
+.c-white {
+  color: #fff;
+}
+
+.fs-14px {
+  font-size: 14px;
+}
+
+.fd-column {
+  flex-direction: column;
+}
+
+.ai-center {
+  align-items: center;
+}
+
+.p-20px {
+  padding: 20px;
+}
+
+.p-5px {
+  padding: 5px;
+}
+
+.b-none {
+  background: none;
+}
+
+.br-5px {
+  border-radius: 5px;
+}
+
+.header {
+  position: fixed;
+  width: 100%;
   padding: 20px 50px;
   background-color: #fff;
 }
@@ -27,42 +72,33 @@ a, a:visited {
   padding: 0;
 }
 
-.nav-list {
+.ml-auto {
   margin-left: auto;
 }
 
-.nav-list-item {
+.ml-20px {
   margin-left: 20px;
 }
 
-.header-logo {
+.logo {
   height: 50px;
+  vertical-align: middle;
+  margin-right: 10px;
 }
 
-.nav-logo {
+.td-none {
   text-decoration: none;
-  align-items: center;
-}
-
-.nav-logo-text {
-  padding-left: 10px;
 }
 
 .hero-container {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 404px;
-  padding: 20px;
-  
+  min-height: 400px;
+  padding-top: 120px;
   background-image: url(../images/banner.png);
   background-position: center;
   background-size: cover;
-
-  color: #fff;
 }
 
-.hero-logo {
+.h-200px {
   height: 200px;
 }
 
@@ -79,11 +115,10 @@ a, a:visited {
   margin-top: 10px;
   padding: 10px 15px;
   border: 1px solid #fff;
-  border-radius: 5px;
-  background: none;
-  font: inherit;
-  color: #fff;
-  font-weight: bold;
+  font-size: 16px;
+}
+
+.c-pointer {
   cursor: pointer;
 }
 
@@ -93,6 +128,9 @@ a, a:visited {
 
 .w-1000 {
   max-width: 1000px;
+}
+
+.m-0-auto {
   margin: 0 auto;
 }
 
@@ -112,11 +150,11 @@ a, a:visited {
   background-color: #f7f7f7;
 }
 
-.advantages-list {
+.jc-spacebetween {
   justify-content: space-between;
 }
 
-.advantages-list-item {
+.w-30percent {
   width: 30%;
 }
 
@@ -124,15 +162,15 @@ a, a:visited {
   padding: 50px 0;
 }
 
-.content-img {
+.h-250px {
   height: 250px;
 }
 
-.about-container {
+.jc-center {
   justify-content: center;
 }
 
-.about-text {
+.mw-520px {
   max-width: 520px;
 }
 
@@ -140,41 +178,31 @@ a, a:visited {
   color: #17d4ae;
 }
 
-.form-container {
-  flex-direction: column;
-  align-items: center;
-  margin: 0 auto;
+.bs-borderbox {
+  box-sizing: border-box;
 }
 
 .booking-fieldset {
-  padding: 20px;
   width: 100%;
-
-  box-sizing: border-box;
   border: 2px groove #17d4ae;
 }
 
-.booking-fieldset-legend {
-  font-weight: bold;
+.fs-1p2em {
   font-size: 1.2em;
 }
 
 .booking-input {
-  border: 1px solid #d8d8d8;
-  border-radius: 5px;
-  padding: 5px;
-
   width: 170px;
   height: 15px;
+  padding: 5px;
+  border: 1px solid #d8d8d8;
 }
 
 .booking-btn {
-  font: inherit;
-  border-radius: 5px;
-  background: none;
-  font-weight: bold;
   align-self: flex-start;
   padding: 10px 25px;
+  font-size: 16px;
+  line-height: 24px;
   border: 1px solid #17d4ae;
 }
 
@@ -190,31 +218,26 @@ a, a:visited {
   max-width: 450px;
 }
 
-.booking-label {
-  align-items: center;
+.p-relative {
   position: relative;
 }
 
-.booking-label-text{
+.booking-label-text {
   width: 50%;
   line-height: 2em;
-  font-weight: bold;
 }
 
-.booking-label select {
+.booking-select {
   padding: 5px;
   padding-left: 10px;
-
   width: 130px;
   height: 25px;
-
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
-
   color: #000;
-  font-size: 12px; 
-  font-family: sans-serif; 
+  font-size: 12px;
+  font-family: sans-serif;
 }
 
 .booking-arrow {
@@ -227,4 +250,17 @@ a, a:visited {
   border: 4px solid transparent;
   border-top-color: #000;
   border-bottom: 0;
+}
+
+.bgc-303846 {
+  background-color: #303846;
+}
+
+.footer-container {
+  padding: 25px;
+  padding-bottom: 40px;
+}
+
+.va-middle {
+  vertical-align: middle;
 }
