style and layout fixes after review

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+:root {
+  --header-height: 100px;
+}
+
 .body {
   margin: 0 auto;
   font-family: sans-serif;
@@ -32,7 +36,11 @@ a:visited {
   color: #fff;
 }
 
-.c-white:visited {
+.btn-white {
+  color: #fff;
+}
+
+.btn-white:visited {
   color: #fff;
 }
 
@@ -52,14 +60,6 @@ a:visited {
   padding: 20px;
 }
 
-.p-5px {
-  padding: 5px;
-}
-
-.b-none {
-  background: none;
-}
-
 .br-5px {
   border-radius: 5px;
 }
@@ -71,6 +71,7 @@ a:visited {
   width: 100%;
   padding: 20px 50px;
   background-color: #fff;
+  height: var(--header-height);
 }
 
 .list-clear {
@@ -96,8 +97,8 @@ a:visited {
   text-decoration: none;
 }
 
-.mt-100px {
-  margin-top: 100px;
+.mt-header-height {
+  margin-top: var(--header-height);
 }
 
 .mt-10px {
@@ -127,31 +128,19 @@ a:visited {
   margin: 5px 0 0;
 }
 
-.hero-button {
-  margin-top: 10px;
-  padding: 10px 15px;
-  border: 1px solid #fff;
-  font-size: 16px;
-}
-
 .c-pointer {
   cursor: pointer;
 }
 
-.hero-button:visited {
-  color: #fff;
-}
-
-.w-1000 {
+.content-container {
   max-width: 1000px;
+  margin: 0 auto;
+  display: flex;
+  padding: 50px;
 }
 
 .m-0-auto {
   margin: 0 auto;
-}
-
-.mb-50 {
-  margin-bottom: 50px;
 }
 
 .mr-100 {
@@ -201,6 +190,7 @@ a:visited {
 .booking-fieldset {
   width: 100%;
   border: 2px groove #17d4ae;
+  margin: 0;
 }
 
 .fs-1p2em {
@@ -217,16 +207,17 @@ a:visited {
 .btn {
   padding: 10px 20px;
   font-size: 16px;
+  font-weight: bold;
   line-height: 24px;
   border: 1px solid #fff;
+  cursor: pointer;
+  background: none;
+  border-radius: 5px;
 }
 
-.as-flexstart {
-  align-self: flex-start;
-}
-
-.bc-turquoise {
+.btn-turquoise {
   border-color: #17d4ae;
+  color: #17d4ae;
 }
 
 .mb-20 {
@@ -238,7 +229,11 @@ a:visited {
 }
 
 .w-450 {
-  max-width: 450px;
+  width: 450px;
+}
+
+.ai-flexstart {
+  align-items: flex-start;
 }
 
 .p-relative {
@@ -277,11 +272,6 @@ a:visited {
 
 .bgc-darkspace {
   background-color: #303846;
-}
-
-.footer-container {
-  padding: 25px;
-  padding-bottom: 40px;
 }
 
 .va-middle {
